# monorepo-bazel

./: .gitignore  README.md  WORKSPACE.bazel  bazel-monorepo-bazel  ingress.yaml
.github/workflows/: main.yml
projects/go_hello_world/: hello_world.go  hello_world_test.go
projects/go_web/: BUILD.bazel  deployment.yaml  main.go  service.yaml
projects/node_web/: BUILD.bazel  deployment.yaml  index.js  service.yaml
