load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")
#load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_deploy")

go_library(
    name = "go_web_lib",
    srcs = ["main.go"],
    deps = [
      "//projects/go_hello_world",
      "@com_github_gorilla_mux//:mux",
    ],
    importpath = "github.com/kriscfoster/multi-language-bazel-monorepo/projects/go_web",
)

go_binary(
    name = "go_web",
    embed = [":go_web_lib"],
)

go_image(
    name = "go_web_image",
    binary = ":go_web",
)

container_push(
  name = "publish_image",
  format = "Docker",
  registry = "asia.gcr.io",
  repository = "expanded-dryad-356011/bazel-golang",
  image = ":go_web_image",
  tag = "latest",
)

#k8s_deploy(
#  name = "golang_deploy",
#  template = ":deployment.yaml",
#)